@@ -58,9 +58,11 @@
 \itemize{ 
 \item Fixed symbol eating bug for Mac OS X.  
 }
+}
 \section{Changes in version 2.5.0}{ 
 \itemize{ 
-\item Fixed symbol eating bug for Mac OS X.  
+\item Rough parameter estimation is improved by introducing constrained entropy maximization.
+\item Fixed bug in C functions \code{RoughEstimationKNN()}, \code{RoughEstimationPW()} and \code{RoughEstimationH()}.
 }
 }
 
